[package]
name = "gluon"
version = "0.1.0"
authors = ["Brett <brett@bmandesigns.com>"]
edition = "2018"

[dependencies]
armake2 = { git = "https://github.com/synixebrett/armake2", branch = "master" }
colored = "1.7"
data-encoding = "*"
docopt = "1"
indicatif = "0.9.0"
linked-hash-map = "*"
num_cpus = "1.10"
rayon = "1.0"
reqwest = "*"
ring = "*"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.9"
serde_json = "1.0"
toml = "0.4"
walkdir = "2.2"
zip = "0.5"

[target.'cfg(windows)'.dependencies]
ansi_term = "0.11"
